[gd_scene load_steps=4 format=3 uid="uid://cx0us5yh0f5eu"]

[ext_resource type="Script" path="res://Scripts/BossFight/Dragon/Attacks/Fireball.gd" id="1_my72o"]
[ext_resource type="Texture2D" uid="uid://d33xitdvk76mj" path="res://Sprites/Dragon/fuego.png" id="2_1lpd4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yjxl3"]

[node name="FireBall" type="Node2D" node_paths=PackedStringArray("max_life_time_timer")]
script = ExtResource("1_my72o")
max_life_time_timer = NodePath("MaxLifeTimeTimer")

[node name="FireballVisualizer" type="Sprite2D" parent="."]
texture = ExtResource("2_1lpd4")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_yjxl3")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]

[node name="MaxLifeTimeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="on_body_entered"]
[connection signal="timeout" from="MaxLifeTimeTimer" to="." method="Destroy"]
